Commit incorporando el pago por PayPal #77 y arreglando errores de traducción

--- a/src/main/webapp/views/driver/messages.properties
+++ b/src/main/webapp/views/driver/messages.properties
@@ -12,7 +12,6 @@ driver.nav.profile		= Profile
 driver.nav.vehicles		= Vehicles
 driver.nav.payment		= Payment
 driver.nav.credentials	= Credentials
-driver.create 			= New driver
 
 
 driver.name				= Name
@@ -29,6 +28,7 @@ driver.password			= Password
 driver.repeat.password	= Repeat Password
 driver.actual.password	= Actual Password
 driver.comment			= Comments
+driver.route			= Routes
 driver.commit.error		= This Operation Cannot be commited. 
 driver.register			= Save
 driver.cancel			= Cancel
@@ -44,4 +44,3 @@ driver.bankAccountNumber= Bank Account Number
 
 driver.commit.errorPassword 	= Passwords are not the same
 driver.params.error				= Cannot commit this operation
-displayDriver					= Driver display
