--- a/src/main/webapp/views/passenger/messages.properties
+++ b/src/main/webapp/views/passenger/messages.properties
@@ -8,6 +8,7 @@
 
 passenger.title.principal	= Configuration
 
+showPassenger				= Display passenger
 passenger.name				= Name
 passenger.surname			= Surname
 passenger.country			= Country
@@ -18,10 +19,10 @@ passenger.password			= Password
 passenger.repeat.password	= Repeat Password
 passenger.actual.password	= Actual Password
 passenger.comment			= Comments
+passenger.route				= Routes
 passenger.commit.error		= This Operation Cannot be commited. 
 passenger.register			= Save
 passenger.cancel			= Cancel
-passengerCreate = New passenger
 
 userAccount.password= pass
 
