--- a/src/main/webapp/views/reservation/messages.properties
+++ b/src/main/webapp/views/reservation/messages.properties
@@ -16,10 +16,16 @@ reservation.status				= 	Status
 reservation.pending				=	Pending
 reservation.accepted			=	Accepted
 reservation.cancelled			=	Cancelled
+reserv.save.confirm				= 	Your money will not be refounded
 
 reservation.passenger			= 	Passenger
 reservation.route				= 	Route
 reservation.price				= 	Price
+
+reserv.luggage.none				= None
+reserv.luggage.small			= Small
+reserv.luggage.medium			= Medium
+reserv.luggage.big				= Big
 
 reservation.create				= 	Make a Reservation
 reservation.cancel				= 	Cancel
