--- a/src/main/webapp/views/reservation/messages_es.properties
+++ b/src/main/webapp/views/reservation/messages_es.properties
@@ -16,10 +16,16 @@ reservation.status				= 	Estado
 reservation.pending				=	Pendiente
 reservation.accepted			=	Aceptada
 reservation.cancelled			=	Cancelada
+reserv.save.confirm				= 	Tu dinero no será reembolsado
 
 reservation.passenger			= 	Pasajero
 reservation.route				= 	Ruta
 reservation.price				= 	Precio
+
+reserv.luggage.none				= Ninguno
+reserv.luggage.small			= Pequeño
+reserv.luggage.medium			= Mediano
+reserv.luggage.big				= Grande
 
 reservation.create				= 	Hacer una Reserva
 reservation.cancel				= 	Cancelar
