--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -30,7 +30,7 @@ route.daysRepeat			= Days to Repeat
 route.availableSeats		= Available Seats
 route.details				= Details
 route.isCancelled			= Aborted Route
-route.maxLuggage			= Allowed Luggage Size
+route.maxLuggage			= Luggage Size
 route.save					= Save
 route.confirm				= Confirm
 route.confirm.cancel		= Are you sure you want to cancel this route?
@@ -39,6 +39,7 @@ route.cancel				= Cancel
 driver.commit.error			= Error while saving during transaction
 route.vehicle				= Vehicle
 route.vehicleType			= Vehicle type
+route.preferences			= Preferences
 
 origin.time					= Departure Time
 destination.time			= Arrival Time
@@ -55,7 +56,9 @@ route.seats					= Seats
 route.price.per.passenger	= Price per Passenger
 route.luggage				= Luggage
 route.commit.error			= Cannot commit operation
+reserv.cancel.confirm		= Are you sure you want to cancel your reservation? your money will not be refounded
 
+route.available.seats		= Available seats
 route.request.seats			= Request Seats
 route.total					= Total
 route.request				= Request
@@ -68,6 +71,7 @@ route.cancel.route 			= Cancel Route
 route.vehicle.type			= Type
 route.vehicle.brand			= Brand
 route.vehicle.model			= Model
+route.vehicle.plate			= Plate
 route.vehicle.description	= Description
 
 route.reserv.pending		= Your reservation is pending of approval
@@ -88,6 +92,11 @@ route.date.format		= {0,date,yyyy/MM/dd HH:mm}
 search					= Search
 search.arrivalDate		= Arrival Date
 search.vehicleType		= Vehicle Type
+
+route.luggage.none		= None
+route.luggage.small		= Small
+route.luggage.medium	= Medium
+route.luggage.big		= Big
 
 comment.star = Score
 comment.text = Note
