--- a/src/main/webapp/views/security/messages.properties
+++ b/src/main/webapp/views/security/messages.properties
@@ -8,8 +8,10 @@
 
 security.login.title	= Login form
 
-security.username		= Email:
-security.password		= Password:
+security.login.enter	= Log in
+
+security.username		= Email
+security.password		= Password
 
 security.login			= Login
 
