--- a/src/main/webapp/views/security/messages_es.properties
+++ b/src/main/webapp/views/security/messages_es.properties
@@ -8,8 +8,9 @@
 
 security.login.title	= Autentificación
 
-security.username		= Email:
-security.password		= Contraseña:
+security.username		= Email
+security.password		= Contraseña
+security.login.enter	= Entrar
 
 security.login			= Login
 
