--- a/src/main/webapp/views/driver/messages_es.properties
+++ b/src/main/webapp/views/driver/messages_es.properties
@@ -28,14 +28,14 @@ driver.password			= Contraseña
 driver.repeat.password	= Repetir contraseña
 driver.actual.password	= Constraseña actual
 driver.comment			= Comentarios
+driver.route			= Rutas
 driver.register			= Guardar
 driver.cancel			= Cancelar
 driver.commit.error		= Esta Operacion no se puede commitear. 
 driver.vehicles			= Ver mis vehiculos
 driver.preferences		= Preferencias
-driver.create 			= Nuevo conductor
 
-creditCard.number		= Número Tarjeta de Credito
+creditCard.number		= Numero Targeta de Credito
 creditCard.expMonth		= Mes de Expiracion
 creditCard.expYear		= Año de Expiracion	
 creditCard.cvv			= CVV
@@ -43,4 +43,3 @@ driver.bankAccountNumber= Cuenta Bancaria
 
 driver.commit.errorPassword 	= Las contraseñas no son iguales
 driver.params.error				= Error en las entradas
-displayDriver						= Perfil de conductor
