--- a/src/main/webapp/views/passenger/messages_es.properties
+++ b/src/main/webapp/views/passenger/messages_es.properties
@@ -8,6 +8,7 @@
 
 passenger.title.principal	= Configuración
 
+showPassenger				= Mostrar pasajero
 passenger.name				= Nombre
 passenger.surname			= Apellidos
 passenger.country			= País
@@ -18,10 +19,10 @@ passenger.password			= Contraseña
 passenger.repeat.password	= Repetir contraseña
 passenger.actual.password	= Constraseña actual
 passenger.comment			= Comentarios
+passenger.route				= Rutas
 passenger.register			= Guardar
 passenger.cancel			= Cancelar
-passenger.commit.error		= Esta Operacion no se puede commitear.
-passengerCreate = Nuevo pasajero
+passenger.commit.error		= Esta Operacion no se puede commitear. 
 
 userAccount.password= pass
 
@@ -31,7 +32,7 @@ comment.date = Fecha
 comment.star = Puntuacion
 
 
-creditCard.number		= Número Tarjeta de Crédito
+creditCard.number		= Numero Targeta de Credito
 creditCard.expMonth		= Mes de Expiracion
 creditCard.expYear		= Año de Expiracion	
 creditCard.cvv			= CVV
