--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -14,6 +14,7 @@ searchRoute					= Buscar Rutas
 searchResults				= Resultados de Búsqueda
 aclaration					= NOTA: Por cada ubicación que la ruta tenga, debes indicar cuánto tiempo (en minutos) crees que te tomará llegar a ella desde la ubicación anterior. Por ejemplo: una ruta que va A -> B -> C, de A a B te tomará 3 minutos, y de B a C 10 minutos, así que introduces un 3 en la ubicación B y un 10 en la C.
 minutes						= Min.
+stop						= Stop
 route.route					= Ruta
 route.stop					= Parada
 route.addStop				= Añadir Parada
@@ -29,15 +30,16 @@ route.daysRepeat			= Dias Repetidos
 route.availableSeats		= Asientos disponibles
 route.details				= Detalles
 route.isCancelled			= Abortar Ruta
-route.maxLuggage			= Tamaño Equipage Permitido
+route.maxLuggage			= Tamaño Equipaje
 route.save					= Guardar
+driver.commit.error			= Error al guardar la transacción
 route.confirm				= Confirmar
 route.confirm.cancel		= ¿Seguro que quieres cancelar esta ruta?
 route.abort					= Abortar Viaje
 route.cancel				= Cancelar
-route.commit.error			= Error al guardar en la transaccion
 route.vehicle				= Vehículo
 route.vehicleType			= Tipo de vehículo
+route.preferences			= Preferencias
 
 origin.time					= Hora de salida
 destination.time			= Hora de llegada
@@ -51,9 +53,12 @@ route.smoke					= Fumar
 route.music					= Musica
 route.children				= Niños
 route.seats					= Asientos
-route.price.per.passenger	= Precio por Pasajero
+route.price.per.passenger	= Precio por pasajero
 route.luggage				= Equipaje
+reserv.cancel.confirm		= ¿Seguro que quieres cancelar la reserva? Tu dinero no será reembolsado
+route.commit.error			= No se puede realizar la operacion
 
+route.available.seats		= Asientos disponibles
 route.request.seats			= Solicitar Asientos
 route.total					= Total
 route.request				= Solicitar
@@ -66,6 +71,7 @@ route.cancel.route 			= Cancelar Ruta
 route.vehicle.type			= Tipo
 route.vehicle.brand			= Marca
 route.vehicle.model			= Modelo
+route.vehicle.plate			= Matrícula
 route.vehicle.description	= Descripcion
 
 route.reserv.pending		= Tu reserva está pendiente de aprobación
@@ -86,6 +92,11 @@ route.date.format		= {0,date,dd/MM/yyyy HH:mm}
 search					= Buscar
 search.arrivalDate		= Fecha de llegada
 search.vehicleType		= Tipo de Vehículo
+
+route.luggage.none		= Ninguno
+route.luggage.small		= Pequeño
+route.luggage.medium	= Mediano
+route.luggage.big		= Grande
 
 comment.star = Puntuación
 comment.text = Comentario
