--- a/src/main/webapp/views/driver/messages_es.properties
+++ b/src/main/webapp/views/driver/messages_es.properties
@@ -35,7 +35,7 @@ driver.commit.error		= Esta Operacion no se puede commitear.
 driver.vehicles			= Ver mis vehiculos
 driver.preferences		= Preferencias
 
-creditCard.number		= Numero Targeta de Credito
+creditCard.number		= Numero Tarjeta de Credito
 creditCard.expMonth		= Mes de Expiracion
 creditCard.expYear		= Año de Expiracion	
 creditCard.cvv			= CVV
