--- a/src/main/webapp/views/passenger/messages_es.properties
+++ b/src/main/webapp/views/passenger/messages_es.properties
@@ -32,7 +32,7 @@ comment.date = Fecha
 comment.star = Puntuacion
 
 
-creditCard.number		= Numero Targeta de Credito
+creditCard.number		= Numero Tarjeta de Credito
 creditCard.expMonth		= Mes de Expiracion
 creditCard.expYear		= Año de Expiracion	
 creditCard.cvv			= CVV
